[package]
name = "hitmap"
version = "0.1.0-dev"
authors = ["Alex Crawford <hitmap@code.acrawford.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
panic = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.1", optional = true}
worker = "0.0.11"

[profile.release]
lto = true
opt-level = "s"
