[package]
name = "hitmap"
version = "0.1.0-dev"
authors = ["Alex Crawford <hitmap@code.acrawford.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.1", optional = true}
log = "0.4.17"
worker = "0.0.11"
worker_logger = "0.2.0"
